--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "pg": "^8.9.0",
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "eslint": "^8.16.0"
