--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "sequelize": "^6.28.0"
   },
