--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
