--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
