--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "sequelize": "^6.28.0",
+    "socket.io": "^4.6.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
